# Simple-Banking-Record-System-c-

./: CMakeLists.txt  README.md  db.sql  main.cpp
db/: db.cpp  db.h
screen/: depositAmount.cpp  getBalance.cpp  log.cpp  newAccount.cpp  screen.cpp  withdrawAmount.cpp
view/: depositAmount.cpp  getAccount.cpp  log.cpp  newAccount.cpp  screen.cpp  withdrawAmount.cpp
