cmake_minimum_required(VERSION 3.3)
project(Banking_Record_System)
set(CMAKE_CXX_STANDARD 14)
add_definitions(-std=c++11)
include_directories(/usr/include/cppconn)
link_directories(/usr/lib)
set(SOURCE_FILES main.cpp)
add_executable(Banking_Record_System ${SOURCE_FILES})
target_link_libraries(Banking_Record_System mysqlcppconn)